# computer_graphics

./: .gitignore  CMakeLists.txt
include/Models/: Signal.h
include/Parsers/: Txtparser.h
src/: CMakeLists.txt  main.cpp
src/FileSys/: CMakeLists.txt
src/GUI/: CMakeLists.txt
src/Models/: CMakeLists.txt  Signal.cpp
src/Plot/: CMakeLists.txt
